--- a/index.html
+++ b/index.html
@@ -21,29 +21,47 @@
    <section class="hero">
     <hr>
     <h1>COLAZIONE... AL CINEMA!</h1>
-</section>
-   <main>
-    <div><img src="immagini/Hollywood_Sign_(Zuschnitt).jpeg" alt="" srcset=""></div>
+    <img src="immagini/Hollywood_Sign_(Zuschnitt).jpeg" alt="" srcset="">
+    <p>In tutti i più grandi film c'è una colazione che si rispetti, ed oggi andremo ad attenzionare, le 4 colazioni più importanti nella storia del cinema. </p> 
           
-  <p>In tutti i più grandi film c'è una colazione che si rispetti, ed oggi andremo ad attenzionare, le 4 colazioni più importanti nella storia del cinema. </p> 
-   </main>
-
-   <main>
-    <div class="cardt1">
+</section>  
+   <main> 
+ <div class="card1">
         <img><img src="immagini/repas-de-bebe-1024x778.jpeg" alt="" srcset="">
         <h2>“REPAS DE BEBE”</h2>
         <p>La nascita del cinema è strettamente legata al momento della colazione: la prima pellicola, in 50 secondi, immortala Auguste Lumière e la moglie intenti nel dare il primo pasto della giornata al loro bambino.  La pellicola s’intitola “Repas de bèbè”.</p>
-    </div>
+     </div>
+
+<div class="card2">
+    <img src="immagini/colazione.jpg" alt="" srcset="">
+    <h2>COLAZIONE DA TIFFANY</h2>
+    <p>Classica colazione francese, caffè nero da asporto e croissant, per la colazione più famosa della storia del cinema, ovviamente da Tiffany</p>
+</div>
+
+<div class="card3">
+    <img src="immagini/pretty.woman.jpg" alt="" srcset="">
+    <h2>PRETTY WOMAN </h2>
+    <p>Per Vivian Ward una colazione 
+        dolce a base di croissant, pancakes, marmellata, frutta fresca, caffè lungo e succhi di frutta.</p>
+</div>
+
+<div class="card4">
+    <img src="immagini/joe.bach.png" alt="" srcset="">
+    <h2>TI PRESENTO JOE BLACK</h2>
+    <p>Il destino fa incontrare a colazione anche Joe e Susan. Per loro classico caffé scuro americano, come l’esito drammatico del loro incontro.</p>
+</div>
+
+<div class="card5">
+    <img src="immagini/benvenuti.al.sud.png" alt="" srcset="">
+    <h2>BENVENUTI AL SUD</h2>
+    <p>Zabaione, salsiccia, friarelli e sanguinaccio per una nutriente, iperproteica colazione meridionale. Té, con latte a parte, fette biscottate e yogurt invece per la colazione del settentrionale Bisio.</p>
+</div>
+
 </main>
 
-
-
-
-
-
-   
    <footer>
-    
+    <p>Colazioni da favola o non convenzionali, nazional-popolari o squinternate per celebrare un momento che da sempre unisce le persone, non solo al cinema.</p>
    </footer>
 </body>
+
 </html>
